[project]
name = "hew-back"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kigawa", email = "contact@kigawa.net" }
]
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "python-jose>=3.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
]
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hew_back"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
dev = 'uvicorn --reload hew_back'
